--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,26 @@
-gplugins {
+plugins {
     id 'java'
 }
 
-group = 'org.example'
-version = '1.0-SNAPSHOT'
+group 'ru.netology'
+version '1.0-SNAPSHOT'
+
+sourceCompatibility = 11
+
+// кодировка файлов (если используете русский язык в файлах)
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
+    // библиотека com.codeborne:selenide используется при построении проекта с использованием Selenide
+    testImplementation 'com.codeborne:selenide:6.17.1'
 
-test {
-    useJUnitPlatform()
-}
+    // при реализации проекте с использованием Selenium вместо библиотеки com.codeborne:selenide подключаются
+    // org.seleniumhq.selenium:selenium-java и io.github.bonigarcia:webdrivermanager
+    // testImplementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
+// testImplementation 'io.github.bonigarcia:webdrivermanager:5.4.1'
